// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`runtime surface golden fixtures setup graphify × claude 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PreToolUse": [
        {
          "hooks": [
            {
              "command": "<root>/companion/.claude/hooks/graphify-guard.sh",
              "type": "command",
            },
          ],
          "matcher": "Bash",
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(<wrapper-bin>/graphify:*)",
        "Bash(graphify:*)",
        "Bash(mate cap graphify:*)",
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(graphify)",
      ],
    },
  },
  "claudeSkills": {
    "graphify/SKILL.md": 
"---
description: builds graphify-out artifacts
---
Write chunks to $GRAPHIFY_OUT and read $GRAPHIFY_OUT later.
"
,
    "graphify/references/github-and-merge.md": 
"Merge graphs into graphify-out of each clone.
"
,
    "graphify/references/usage.md": 
"Outputs land in $GRAPHIFY_OUT by default.
"
,
  },
  "opencodeConfig": null,
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": null,
}
`;

exports[`runtime surface golden fixtures setup graphify × opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": null,
  "claudeMd": null,
  "claudeSettingsLocal": null,
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {
    "graphify.js": 
"export default {}
"
,
  },
  "opencodeSkills": {
    "graphify/SKILL.md": 
"---
description: builds graphify-out artifacts
---
Write chunks to $GRAPHIFY_OUT and read $GRAPHIFY_OUT later.
"
,
    "graphify/references/github-and-merge.md": 
"Merge graphs into graphify-out of each clone.
"
,
    "graphify/references/usage.md": 
"Outputs land in $GRAPHIFY_OUT by default.
"
,
  },
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup graphify × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PreToolUse": [
        {
          "hooks": [
            {
              "command": "<root>/companion/.claude/hooks/graphify-guard.sh",
              "type": "command",
            },
          ],
          "matcher": "Bash",
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(<wrapper-bin>/graphify:*)",
        "Bash(graphify:*)",
        "Bash(mate cap graphify:*)",
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(graphify)",
      ],
    },
  },
  "claudeSkills": {
    "graphify/SKILL.md": 
"---
description: builds graphify-out artifacts
---
Write chunks to $GRAPHIFY_OUT and read $GRAPHIFY_OUT later.
"
,
    "graphify/references/github-and-merge.md": 
"Merge graphs into graphify-out of each clone.
"
,
    "graphify/references/usage.md": 
"Outputs land in $GRAPHIFY_OUT by default.
"
,
  },
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {
    "graphify.js": 
"export default {}
"
,
  },
  "opencodeSkills": {
    "graphify/SKILL.md": 
"---
description: builds graphify-out artifacts
---
Write chunks to $GRAPHIFY_OUT and read $GRAPHIFY_OUT later.
"
,
    "graphify/references/github-and-merge.md": 
"Merge graphs into graphify-out of each clone.
"
,
    "graphify/references/usage.md": 
"Outputs land in $GRAPHIFY_OUT by default.
"
,
  },
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup tokensave × claude 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {
      "tokensave": {
        "args": [
          "serve",
        ],
        "command": "tokensave",
      },
    },
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PreToolUse": [
        {
          "hooks": [
            {
              "args": [
                "hook-pre-tool-use",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
          "matcher": "Agent|Grep|Bash",
        },
      ],
      "Stop": [
        {
          "hooks": [
            {
              "args": [
                "hook-stop",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
        },
      ],
      "UserPromptSubmit": [
        {
          "hooks": [
            {
              "args": [
                "hook-prompt-submit",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "mcp__tokensave__*",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": null,
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": null,
}
`;

exports[`runtime surface golden fixtures setup tokensave × opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": null,
  "claudeMd": null,
  "claudeSettingsLocal": null,
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "mcp": {
      "tokensave": {
        "command": [
          "tokensave",
          "serve",
        ],
        "enabled": true,
        "type": "local",
      },
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup tokensave × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {
      "tokensave": {
        "args": [
          "serve",
        ],
        "command": "tokensave",
      },
    },
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PreToolUse": [
        {
          "hooks": [
            {
              "args": [
                "hook-pre-tool-use",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
          "matcher": "Agent|Grep|Bash",
        },
      ],
      "Stop": [
        {
          "hooks": [
            {
              "args": [
                "hook-stop",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
        },
      ],
      "UserPromptSubmit": [
        {
          "hooks": [
            {
              "args": [
                "hook-prompt-submit",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "mcp__tokensave__*",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "mcp": {
      "tokensave": {
        "command": [
          "tokensave",
          "serve",
        ],
        "enabled": true,
        "type": "local",
      },
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup context-mode × claude 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(context-mode:context-mode)",
        "mcp__plugin_context-mode_context-mode__*",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": null,
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": null,
}
`;

exports[`runtime surface golden fixtures setup context-mode × opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->

<!-- mate:managed:context-mode:9561e6cf6059 start -->
## Context Mode

Use Context Mode tools for commands or tool calls whose output may be large, for sandboxed analysis of large files or structured data, and when indexing large fetched content.

Canonical Mate policy and any more specific tool-routing instructions remain authoritative. In particular, follow explicit requirements to use TokenSave for codebase exploration, Context7 for library documentation, and specialized tools for their assigned operations; Context Mode complements rather than replaces them.
<!-- mate:managed:context-mode:9561e6cf6059 end -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": null,
  "claudeMd": null,
  "claudeSettingsLocal": null,
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
      "context-mode@1.0.169",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
      "context-mode@1.0.169",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup context-mode × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->

<!-- mate:managed:context-mode:9561e6cf6059 start -->
## Context Mode

Use Context Mode tools for commands or tool calls whose output may be large, for sandboxed analysis of large files or structured data, and when indexing large fetched content.

Canonical Mate policy and any more specific tool-routing instructions remain authoritative. In particular, follow explicit requirements to use TokenSave for codebase exploration, Context7 for library documentation, and specialized tools for their assigned operations; Context Mode complements rather than replaces them.
<!-- mate:managed:context-mode:9561e6cf6059 end -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(context-mode:context-mode)",
        "mcp__plugin_context-mode_context-mode__*",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
      "context-mode@1.0.169",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
      "context-mode@1.0.169",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup react-doctor × claude 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {
    "react-doctor.sh": "e25569935b64",
  },
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PostToolUse": [
        {
          "hooks": [
            {
              "command": "sh "<root>/companion/.claude/hooks/react-doctor.sh"",
              "timeout": 5,
              "type": "command",
            },
          ],
          "matcher": "Write|Edit|MultiEdit|NotebookEdit|ApplyPatch",
        },
      ],
      "Stop": [
        {
          "hooks": [
            {
              "command": "sh "<root>/companion/.claude/hooks/react-doctor.sh"",
              "timeout": 45,
              "type": "command",
            },
          ],
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Bash(npx react-doctor:*)",
        "Bash(npx react-doctor@latest *)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(react-doctor)",
      ],
    },
  },
  "claudeSkills": {
    "react-doctor/SKILL.md": "df58b3490543",
    "react-doctor/references/explain.md": "2382ea820f20",
  },
  "opencodeConfig": null,
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": null,
}
`;

exports[`runtime surface golden fixtures setup react-doctor × opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": null,
  "claudeMd": null,
  "claudeSettingsLocal": null,
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {
    "react-doctor/SKILL.md": "df58b3490543",
    "react-doctor/references/explain.md": "2382ea820f20",
  },
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup react-doctor × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {
    "react-doctor.sh": "e25569935b64",
  },
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PostToolUse": [
        {
          "hooks": [
            {
              "command": "sh "<root>/companion/.claude/hooks/react-doctor.sh"",
              "timeout": 5,
              "type": "command",
            },
          ],
          "matcher": "Write|Edit|MultiEdit|NotebookEdit|ApplyPatch",
        },
      ],
      "Stop": [
        {
          "hooks": [
            {
              "command": "sh "<root>/companion/.claude/hooks/react-doctor.sh"",
              "timeout": 45,
              "type": "command",
            },
          ],
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Bash(npx react-doctor:*)",
        "Bash(npx react-doctor@latest *)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(react-doctor)",
      ],
    },
  },
  "claudeSkills": {
    "react-doctor/SKILL.md": "df58b3490543",
    "react-doctor/references/explain.md": "2382ea820f20",
  },
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {
    "react-doctor/SKILL.md": "df58b3490543",
    "react-doctor/references/explain.md": "2382ea820f20",
  },
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup openspec × claude 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(<wrapper-bin>/openspec:*)",
        "Bash(mate cap graphify:*)",
        "Bash(mate:*)",
        "Bash(openspec:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(mate-artifact-finish)",
        "Skill(mate-openspec-backfill)",
        "Skill(openspec-apply-change)",
        "Skill(openspec-archive-change)",
        "Skill(openspec-explore)",
        "Skill(openspec-propose)",
      ],
    },
  },
  "claudeSkills": {
    "openspec-apply-change/SKILL.md": "b023edd228ab",
    "openspec-archive-change/SKILL.md": "890bada99035",
    "openspec-explore/SKILL.md": "477fdec2cdb0",
    "openspec-propose/SKILL.md": "13e8a2d0d873",
  },
  "opencodeConfig": null,
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": null,
}
`;

exports[`runtime surface golden fixtures setup openspec × opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": null,
  "claudeMd": null,
  "claudeSettingsLocal": null,
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {
    "openspec-apply-change/SKILL.md": "cb6e43b175c8",
    "openspec-archive-change/SKILL.md": "920c4cc68edf",
    "openspec-explore/SKILL.md": "87d1237e5ffa",
    "openspec-propose/SKILL.md": "3618b84ce74c",
  },
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup openspec × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(<wrapper-bin>/openspec:*)",
        "Bash(mate cap graphify:*)",
        "Bash(mate:*)",
        "Bash(openspec:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(mate-artifact-finish)",
        "Skill(mate-openspec-backfill)",
        "Skill(openspec-apply-change)",
        "Skill(openspec-archive-change)",
        "Skill(openspec-explore)",
        "Skill(openspec-propose)",
      ],
    },
  },
  "claudeSkills": {
    "openspec-apply-change/SKILL.md": "b023edd228ab",
    "openspec-archive-change/SKILL.md": "890bada99035",
    "openspec-explore/SKILL.md": "477fdec2cdb0",
    "openspec-propose/SKILL.md": "13e8a2d0d873",
  },
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {
    "openspec-apply-change/SKILL.md": "cb6e43b175c8",
    "openspec-archive-change/SKILL.md": "920c4cc68edf",
    "openspec-explore/SKILL.md": "87d1237e5ffa",
    "openspec-propose/SKILL.md": "3618b84ce74c",
  },
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures setup all capabilities × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->

<!-- mate:managed:context-mode:9561e6cf6059 start -->
## Context Mode

Use Context Mode tools for commands or tool calls whose output may be large, for sandboxed analysis of large files or structured data, and when indexing large fetched content.

Canonical Mate policy and any more specific tool-routing instructions remain authoritative. In particular, follow explicit requirements to use TokenSave for codebase exploration, Context7 for library documentation, and specialized tools for their assigned operations; Context Mode complements rather than replaces them.
<!-- mate:managed:context-mode:9561e6cf6059 end -->
"
,
  "claudeHooks": {
    "react-doctor.sh": "e25569935b64",
  },
  "claudeMcpConfig": {
    "mcpServers": {
      "tokensave": {
        "args": [
          "serve",
        ],
        "command": "tokensave",
      },
    },
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PostToolUse": [
        {
          "hooks": [
            {
              "command": "sh "<root>/companion/.claude/hooks/react-doctor.sh"",
              "timeout": 5,
              "type": "command",
            },
          ],
          "matcher": "Write|Edit|MultiEdit|NotebookEdit|ApplyPatch",
        },
      ],
      "PreToolUse": [
        {
          "hooks": [
            {
              "args": [
                "hook-pre-tool-use",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
          "matcher": "Agent|Grep|Bash",
        },
        {
          "hooks": [
            {
              "command": "<root>/companion/.claude/hooks/graphify-guard.sh",
              "type": "command",
            },
          ],
          "matcher": "Bash",
        },
      ],
      "Stop": [
        {
          "hooks": [
            {
              "args": [
                "hook-stop",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
        },
        {
          "hooks": [
            {
              "command": "sh "<root>/companion/.claude/hooks/react-doctor.sh"",
              "timeout": 45,
              "type": "command",
            },
          ],
        },
      ],
      "UserPromptSubmit": [
        {
          "hooks": [
            {
              "args": [
                "hook-prompt-submit",
              ],
              "command": "<root>/bin/tokensave",
              "type": "command",
            },
          ],
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(<wrapper-bin>/graphify:*)",
        "Bash(<wrapper-bin>/openspec:*)",
        "Bash(graphify:*)",
        "Bash(mate cap graphify:*)",
        "Bash(mate cap graphify:*)",
        "Bash(mate:*)",
        "Bash(npx react-doctor:*)",
        "Bash(npx react-doctor@latest *)",
        "Bash(openspec:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(context-mode:context-mode)",
        "Skill(graphify)",
        "Skill(mate-artifact-finish)",
        "Skill(mate-openspec-backfill)",
        "Skill(openspec-apply-change)",
        "Skill(openspec-archive-change)",
        "Skill(openspec-explore)",
        "Skill(openspec-propose)",
        "Skill(react-doctor)",
        "mcp__plugin_context-mode_context-mode__*",
        "mcp__tokensave__*",
      ],
    },
  },
  "claudeSkills": {
    "graphify/SKILL.md": 
"---
description: builds graphify-out artifacts
---
Write chunks to $GRAPHIFY_OUT and read $GRAPHIFY_OUT later.
"
,
    "graphify/references/github-and-merge.md": 
"Merge graphs into graphify-out of each clone.
"
,
    "graphify/references/usage.md": 
"Outputs land in $GRAPHIFY_OUT by default.
"
,
    "openspec-apply-change/SKILL.md": "b023edd228ab",
    "openspec-archive-change/SKILL.md": "890bada99035",
    "openspec-explore/SKILL.md": "477fdec2cdb0",
    "openspec-propose/SKILL.md": "13e8a2d0d873",
    "react-doctor/SKILL.md": "df58b3490543",
    "react-doctor/references/explain.md": "2382ea820f20",
  },
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "mcp": {
      "tokensave": {
        "command": [
          "tokensave",
          "serve",
        ],
        "enabled": true,
        "type": "local",
      },
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
      "context-mode@1.0.169",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {
    "graphify.js": 
"export default {}
"
,
  },
  "opencodeSkills": {
    "graphify/SKILL.md": 
"---
description: builds graphify-out artifacts
---
Write chunks to $GRAPHIFY_OUT and read $GRAPHIFY_OUT later.
"
,
    "graphify/references/github-and-merge.md": 
"Merge graphs into graphify-out of each clone.
"
,
    "graphify/references/usage.md": 
"Outputs land in $GRAPHIFY_OUT by default.
"
,
    "openspec-apply-change/SKILL.md": "cb6e43b175c8",
    "openspec-archive-change/SKILL.md": "920c4cc68edf",
    "openspec-explore/SKILL.md": "87d1237e5ffa",
    "openspec-propose/SKILL.md": "3618b84ce74c",
    "react-doctor/SKILL.md": "df58b3490543",
    "react-doctor/references/explain.md": "2382ea820f20",
  },
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
      "context-mode@1.0.169",
    ],
  },
}
`;

exports[`runtime surface golden fixtures teardown graphify × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures teardown tokensave × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures teardown context-mode × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->

"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures teardown react-doctor × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures teardown openspec × claude+opencode 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "$schema": "https://opencode.ai/config.json",
    "compaction": {
      "auto": true,
      "prune": true,
      "reserved": 15000,
    },
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
    "references": {
      "mate": "..",
    },
    "tool_output": {
      "max_bytes": 20000,
      "max_lines": 500,
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": {
    "$schema": "https://opencode.ai/tui.json",
    "plugin": [
      "@uniqbit/mate-opencode-plugin@0.15.5-canary.0",
    ],
  },
}
`;

exports[`runtime surface golden fixtures deselect opencode runtime with graphify enabled 1`] = `
{
  "agentsMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for AGENTS.md compatibility and must not restate that policy.

## Agent Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- MCP tools named \`mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {},
  },
  "claudeMd": 
"<!-- MATE:COMPANION:START -->

You are operating in a Mate-managed session.

Canonical companion policy is injected through \`<companion-policy framework="mate" priority="mandatory">\`.
This block is kept for Claude/AGENTS.md compatibility and must not restate that policy.

## Claude Notes

- Use absolute paths when a tool needs a file path. Do not create literal \`$MATE_REPO_PATH\` or \`$MATE_ARTIFACT_PATH\` directories.
- When reporting information to me, be extremely concise and sacrifice grammar for the sake of concision. Apply this same preference to JSDoc.
- Code comments: JSDoc format only (\`/** ... */\`), never \`//\`. Sparse — only non-obvious invariants or constraints, never restated artifact rationale.
- Claude Code receives \`$MATE_ARTIFACT_PATH\` via \`--add-dir\`; if \`@\` autocomplete does not show companion artifacts, reference them by absolute path.
- MCP tools named \`mcp__mate__mate__<tool>\` are companion MCP servers delivered through the Mate gateway (\`.mate/mcp.yaml\` in the companion). \`mate mcp status\` inspects the gateway.
- The root \`CLAUDE.md\` in the companion repo is intentional and loaded by Mate. Do not create another project-level \`CLAUDE.md\` in the working repo unless the user explicitly asks for one.
- Never add a \`Co-Authored-By: <model>\` trailer or model-attribution footer to commit messages.
- Never commit, push, or open a pull request in the working repo (\`$MATE_REPO_PATH\`) unless the user explicitly asks for it.
- Never connect to a database (local or remote), touch live/external systems (deploys, infra), or take destructive/irreversible actions without asking the user first.

<!-- MATE:COMPANION:END -->
"
,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "hooks": {
      "PreToolUse": [
        {
          "hooks": [
            {
              "command": "<root>/companion/.claude/hooks/graphify-guard.sh",
              "type": "command",
            },
          ],
          "matcher": "Bash",
        },
      ],
    },
    "permissions": {
      "allow": [
        "Bash(<wrapper-bin>/graphify:*)",
        "Bash(graphify:*)",
        "Bash(mate cap graphify:*)",
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
        "Skill(graphify)",
      ],
    },
  },
  "claudeSkills": {
    "graphify/SKILL.md": 
"---
description: builds graphify-out artifacts
---
Write chunks to $GRAPHIFY_OUT and read $GRAPHIFY_OUT later.
"
,
    "graphify/references/github-and-merge.md": 
"Merge graphs into graphify-out of each clone.
"
,
    "graphify/references/usage.md": 
"Outputs land in $GRAPHIFY_OUT by default.
"
,
  },
  "opencodeConfig": null,
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": null,
}
`;

exports[`working repo golden fixtures sync working repo with capabilities [tokensave, react-doctor] 1`] = `
{
  "claudeMd": 
"# Project

User notes.
"
,
  "gitExclude": 
".claude/settings.local.json
.mcp.json
.tokensave/
"
,
  "settingsLocal": {
    "enabledMcpjsonServers": [
      "tokensave",
      "mate",
    ],
    "enabledPlugins": {
      "mate-companion@mate-companion": true,
    },
    "env": {
      "CLAUDE_CODE_ADDITIONAL_DIRECTORIES_CLAUDE_MD": "1",
      "MATE_ARTIFACT_PATH": "<root>/companion",
      "MATE_GIT_AUTO_MODE": "0",
      "MATE_GRAPHIFY_ENABLED": "0",
      "MATE_NAME": "mate",
      "MATE_OPENSPEC_ENABLED": "0",
      "MATE_POLICY_JSON": "{"allowedAgents":["claude"]}",
      "MATE_REACT_DOCTOR_BIN_PATH": "<reactDoctorBin>",
      "MATE_REACT_DOCTOR_ENABLED": "1",
      "MATE_REPO_ID": "working",
      "MATE_REPO_PATH": "<root>/working",
      "MATE_VERSION": "<version>",
      "MATE_WRAPPER_BIN_PATH": "<wrapperBin>",
    },
    "extraKnownMarketplaces": {
      "mate-companion": {
        "source": {
          "path": "<root>/companion",
          "source": "directory",
        },
      },
    },
    "hooks": {
      "PreToolUse": [
        {
          "hooks": [
            {
              "command": "user-hook.sh",
              "type": "command",
            },
          ],
          "matcher": "Bash",
        },
      ],
    },
    "permissions": {
      "additionalDirectories": [
        "<root>/working/keep",
        "<root>/companion",
      ],
      "allow": [
        "User(entry)",
      ],
    },
  },
}
`;

exports[`working repo golden fixtures sync working repo with capabilities [] 1`] = `
{
  "claudeMd": 
"# Project

User notes.
"
,
  "gitExclude": 
".claude/settings.local.json
.mcp.json
"
,
  "settingsLocal": {
    "enabledMcpjsonServers": [
      "mate",
    ],
    "enabledPlugins": {
      "mate-companion@mate-companion": true,
    },
    "env": {
      "CLAUDE_CODE_ADDITIONAL_DIRECTORIES_CLAUDE_MD": "1",
      "MATE_ARTIFACT_PATH": "<root>/companion",
      "MATE_GIT_AUTO_MODE": "0",
      "MATE_GRAPHIFY_ENABLED": "0",
      "MATE_NAME": "mate",
      "MATE_OPENSPEC_ENABLED": "0",
      "MATE_POLICY_JSON": "{"allowedAgents":["claude"]}",
      "MATE_REACT_DOCTOR_ENABLED": "0",
      "MATE_REPO_ID": "working",
      "MATE_REPO_PATH": "<root>/working",
      "MATE_VERSION": "<version>",
      "MATE_WRAPPER_BIN_PATH": "<wrapperBin>",
    },
    "extraKnownMarketplaces": {
      "mate-companion": {
        "source": {
          "path": "<root>/companion",
          "source": "directory",
        },
      },
    },
    "hooks": {
      "PreToolUse": [
        {
          "hooks": [
            {
              "command": "user-hook.sh",
              "type": "command",
            },
          ],
          "matcher": "Bash",
        },
      ],
    },
    "permissions": {
      "additionalDirectories": [
        "<root>/working/keep",
        "<root>/companion",
      ],
      "allow": [
        "User(entry)",
      ],
    },
  },
}
`;

exports[`working repo golden fixtures hub roots set up providers only without companion surfaces 1`] = `
{
  "agentsMd": null,
  "claudeHooks": {},
  "claudeMcpConfig": {
    "mcpServers": {
      "tokensave": {
        "args": [
          "serve",
        ],
        "command": "tokensave",
      },
    },
  },
  "claudeMd": null,
  "claudeSettingsLocal": {
    "autoMemoryEnabled": false,
    "permissions": {
      "allow": [
        "Bash(mate:*)",
        "Edit(<root>/companion/**)",
        "Read(<root>/companion/**)",
      ],
    },
  },
  "claudeSkills": {},
  "opencodeConfig": {
    "mcp": {
      "tokensave": {
        "command": [
          "tokensave",
          "serve",
        ],
        "enabled": true,
        "type": "local",
      },
    },
  },
  "opencodePlugins": {},
  "opencodeSkills": {},
  "opencodeTui": null,
}
`;
